# MoonGB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: core.hpp  main.cpp  main.hpp
src/emulator/: cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  gameboy.cpp  gameboy.hpp  gbdefs.hpp  memory.cpp  memory.hpp  ppu.cpp  ppu.hpp
src/program/: config.cpp  config.hpp  logger.cpp  logger.hpp  program.cpp  program.hpp  window.cpp  window.hpp
src/program/graphics/: font.hpp
src/program/interface/: gui_controller.cpp  gui_controller.hpp  gui_menu.cpp  gui_menu.hpp  gui_menu_controller.cpp  gui_menu_controller.hpp  gui_widget.cpp  gui_widget.hpp
src/program/interface/menus/: gui_main_menu.cpp  gui_main_menu.hpp  gui_motd_menu.cpp  gui_motd_menu.hpp  gui_now_playing_menu.cpp  gui_now_playing_menu.hpp  gui_test_menu.cpp  gui_test_menu.hpp
src/program/interface/widgets/: gui_box.cpp  gui_box.hpp  gui_button.cpp  gui_button.hpp  gui_label.cpp  gui_label.hpp  gui_text.cpp  gui_text.hpp
src/utility/: filedialogue.cpp  filedialogue.hpp  mathutil.hpp
